--- a/css/estilos.css
+++ b/css/estilos.css
@@ -1,20 +1,16 @@
-*{
+body{
+background: #51545d;
+font-family: sans-serif;
+min-height: 100%;
 
-    
-        margin: 0;
-        padding: 0;
-        box-sizing: border-box;
-    }
-    
-    body{
-        background: #51545d;
-        font-family: sans-serif;
-    }
+}
+
+
 .bg-mio {
 
 
-    background: rgba(0, 0, 0, 0.5);
-    color: #fff; 
+background: rgba(0, 0, 0, 0.5);
+color: #fff; 
 
 
 }
@@ -23,5 +19,30 @@
 
 font-weight: lighter;
 color: rgb(255, 255, 255);
+
+}
+
+/*---MEDIAQUAREAS-----*/
+
+/*mapa responsive*/
+
+@media (max-width:768px) {
+
+.mapa {
+
+width: 100%;
+height: 100%;
+padding-bottom: 50%;
+
+    
+}
+}
+@media only screen and (min-width: 576px) {
+
+.mapa {
+width: 100%;
+height: 100%;
+padding-top: 3%;
+}
 
 }
