--- a/css/estilos.css
+++ b/css/estilos.css
@@ -22,22 +22,20 @@ color: rgb(255, 255, 255);
 
 }
 
+
 /*---MEDIAQUAREAS-----*/
 
 /*mapa responsive*/
 
-@media (max-width:768px) {
+/*@media (max-width:768px) {
 
 .mapa {
 
 width: 100%;
 height: 100%;
-padding-bottom: 50%;
-
-    
-}
-}
-@media only screen and (min-width: 576px) {
+/*padding-bottom: 50%;*/
+/*---notebook*/
+@media only screen and (min-width: 576px)and (max-width: 1900px) {
 
 .mapa {
 width: 100%;
